css/style.css
#main-navbar {
  background-color: hotpink;
  overflow:hidden;
}
#navbar-container{
  text-align: center;
}
#main-navbar ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  position: relative;
  display: inline-block;
}
#main-navbar ul li{
  float: left;
}
#main-navbar ul li a{
  position: relative;
  display: block;
  padding: 10px 20px;
  color: rgb(255, 252, 254);
  text-decoration: none;
}
#main-navbar ul li a:hover {
  background-color: mistyrose;
  color: hotpink;
}
body {
  background-color: mistyrose;
  font-family: 'Times New Roman', Times, serif;
  text-align: center;
  color:hotpink;
  padding-left: 2%;
  padding-right: 2%;
}
#name {
  font-family: 'silkscreen';
  color:hotpink;
  font-weight: bolder;
  text-align:left;
  position: sticky;
  font-size: 60px;
  padding-bottom: 2%;
}
h2 {
  color:rgb(255, 64, 159);
  float: none;
  font-size: 35px;
  padding-top: 3%;
  padding-bottom: .75em;
}
h4 {
  color:rgb(237, 25, 131);
  font-size: 1.2em;
  font-weight:lighter;
  padding-bottom: 2%;
  padding-top:0.5em;
}
#contact {
  position: relative;
  font-size: 15px;
  font-style: italic;
  font-weight: bold;
  padding-top: 15%;
  padding-bottom: 3%;
}
ul{
  list-style-type: none;
}
#portfolio {
  float: left;
  text-align: left;
  font-size: 25px;
  font-weight: bold;
  padding-top: 0%;
  padding-bottom: 2%;
  font-style: italic;
}
#class{
  max-width: 100%;
  max-height: 75%;
}
#arabesque{
  max-width: 200px;
  max-height: 200px;
}
#blackwhite{
  max-width: 100%;
  max-height: 100%;
}
#powderdance{
  max-width: 20em;
  max-height: 20em;
}

